tests/incremental_delete/incremental_delete.exp

Initial status:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 4 errors

Delete c.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 3 errors

Delete b.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 2 errors

Restore b.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 3 errors

Restore c.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 4 errors

Delete d.json:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 4 errors

Delete unchecked.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0

Error: requires_unchecked.js:5
  5: var unchecked = require('Unchecked');
                             ^^^^^^^^^^^ Unchecked. Required module not found


Found 5 errors

Restore unchecked.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 4 errors

Delete dupe2.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string


Found 3 errors

Restore dupe2.js:
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string

Error: dupe2.js:0
Dupe. Duplicate module provider
current provider. See: dupe1.js:0


Found 4 errors

Done!
